# synchronizer

./: .gitignore  Dockerfile.RBDOOM-3-BFG  Dockerfile.bazel  Dockerfile.chocolate-doom  Dockerfile.cmake  README.md  content.sh  process  process_chocolate-doom.sh  process_dhewm3.sh  processprine.sh  scheduled_client.sh  scheduled_server.sh  shared  variables
shared/: containers  terminal
targets/content/: process
targets/development/: process
targets/development/repositories/: process
targets/development/toolchain/: Dockerfile
targets/personal/: process
targets/personal/repositories/: process
targets/randoms/: process
targets/server/: process
targets/server-pc/: process
targets/server-pc/content/: process  process_service_deluge  process_service_deluge.yaml  process_service_plex  process_service_plex.yaml
targets/server-pc/development/: process  process_docker_git  process_docker_git.Dockerfile  process_docker_git.command  process_git_clone  process_git_clone.Dockerfile  process_git_clone.command  process_git_common  process_git_common.Dockerfile  process_git_synchronize  process_git_synchronize.Dockerfile  process_git_synchronize.command
targets/server-pc/randoms/: process
targets/server/midgard/: process  (+6 more)
targets/wynand-dt/: process
targets/wynand-pc/: process
work/: Dockerfile.OpenCL-ICD-Loader  Dockerfile.dhewm3  Dockerfile.scrapbook-gl  Dockerfile.toolchain  content.yaml  images.sh  process-idsoftware.sh  process-wp-gl.sh  process.sh  process_axboe.sh  process_intel.sh  processkhronos.sh  processrb.sh  processwp.sh  shared
(+422 files in other folders)
